update manifest.json && add _locales

--- a/src/options.html
+++ b/src/options.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>popup</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/popup.css">
+  <title>options</title>
 </head>
 <body>
-  <div class="popup-container">content</div>
+  <div>options.html</div>
 </body>
 </html>
