init popup.html && update manifest

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,9 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>popup</title>
   <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/flipclock.min.css">
   <link rel="stylesheet" href="./css/popup.css">
 </head>
 <body>
-  <div class="popup-container">content</div>
+  <div class="popup-container">
+      <div class="clock"></div>
+  </div>
+  <script src="./js/jquery-1.12.4.js"></script>
+  <script src="./js/flipclock.min.js"></script>
+  <script src="./js/popup.js"></script>
 </body>
 </html>
