complete popup page

--- a/src/popup.html
+++ b/src/popup.html
@@ -11,7 +11,21 @@
 </head>
 <body>
   <div class="popup-container">
-      <div class="clock"></div>
+    <div class="images">
+      <div class="images-no1">
+        <img src="./images/nan1.jpeg">
+      </div>
+      <div class="images-no2">
+        <img src="./images/nan2.jpeg">
+      </div>
+      <div class="images-no3">
+        <img src="./images/nan3.jpeg">
+      </div>
+    </div>
+    <div class="docs"></div>
+    <div class="clock"></div>
+    <p class="fly fly-1"></p>
+    <p class="fly fly-2"></p>
   </div>
   <script src="./js/jquery-1.12.4.js"></script>
   <script src="./js/flipclock.min.js"></script>
