add cloud animation

--- a/src/popup.html
+++ b/src/popup.html
@@ -26,6 +26,8 @@
     <div class="clock"></div>
     <p class="fly fly-1"></p>
     <p class="fly fly-2"></p>
+    <p class="yun"></p>
+    <p class="yun2"></p>
   </div>
   <script src="./js/jquery-1.12.4.js"></script>
   <script src="./js/flipclock.min.js"></script>
